src/objects/Direct_Access_App_Toll_Free_No__c/Direct_Access_App_Toll_Free_No__c.object-meta.xml
<CustomObject>
    <description>To Store Direct Access App Toll Free No&apos;s</description>
    <label>Direct Access App Toll Free No</label>
    <nameField>
        <displayFormat>DAA-{0000}</displayFormat>
        <label>Direct Access App Toll Free No Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Direct Access App Toll Free Nos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>