src/objects/Direct_Access_App_Toll_Free_No__c/fields/Aero_Country_Name__c.field-meta.xml
<CustomField>
    <fullName>Aero_Country_Name__c</fullName>
    <formula>if(TEXT( Aero_Name__c)==&apos;Aero My Country Is Not Listed&apos;,&apos;AMy Country Is Not Listed&apos;, 
if(TEXT( Aero_Name__c)==&apos;Aero USA/CANADA&apos;,&apos;AUSA/CANADA&apos;,MID(TEXT( Aero_Name__c), 5, LEN(TEXT( Aero_Name__c)))) )</formula>
    <label>Aero Country Name</label>
    <type>Text</type>
</CustomField>