src/objects/Direct_Access_App_Toll_Free_No__c/fields/Aero_Name__c.field-meta.xml
<CustomField>
    <fullName>Aero_Name__c</fullName>
    <description>To Store Direct Access App Toll Free No&apos;s</description>
    <label>Aero Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aero Singapore</fullName>
            </value>
            <value>
                <fullName>Aero Phillipines</fullName>
            </value>
            <value>
                <fullName>Aero Australia</fullName>
            </value>
            <value>
                <fullName>Aero China</fullName>
            </value>
            <value>
                <fullName>Aero Hong Kong</fullName>
            </value>
            <value>
                <fullName>Aero Taiwan</fullName>
            </value>
            <value>
                <fullName>Aero Japan</fullName>
            </value>
            <value>
                <fullName>Aero Korea</fullName>
            </value>
            <value>
                <fullName>Aero New Zealand</fullName>
            </value>
            <value>
                <fullName>Aero Indonesia</fullName>
            </value>
            <value>
                <fullName>Aero Malaysia</fullName>
            </value>
            <value>
                <fullName>Aero Thailand</fullName>
            </value>
            <value>
                <fullName>Aero India</fullName>
            </value>
            <value>
                <fullName>Aero USA/CANADA</fullName>
            </value>
            <value>
                <fullName>Aero My Country Is Not Listed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>