src/objects/Direct_Access_App_Toll_Free_No__c/fields/ATS_Country_Name__c.field-meta.xml
<CustomField>
    <fullName>ATS_Country_Name__c</fullName>
    <formula>if(TEXT( ATS_Name__c)==&apos;ATS My Country Is Not Listed&apos;,&apos;AMy Country Is Not Listed&apos;, 
if(TEXT( ATS_Name__c)==&apos;ATS USA/CANADA&apos;,&apos;AUSA/CANADA&apos;,MID(TEXT( ATS_Name__c), 5, LEN(TEXT( ATS_Name__c)))) )</formula>
    <label>ATS Country Name</label>
    <type>Text</type>
</CustomField>