src/objects/Direct_Access_App_Toll_Free_No__c/fields/ATS_Name__c.field-meta.xml
<CustomField>
    <fullName>ATS_Name__c</fullName>
    <label>ATS Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ATS Singapore</fullName>
            </value>
            <value>
                <fullName>ATS Phillipines</fullName>
            </value>
            <value>
                <fullName>ATS Australia</fullName>
            </value>
            <value>
                <fullName>ATS China</fullName>
            </value>
            <value>
                <fullName>ATS Hong Kong</fullName>
            </value>
            <value>
                <fullName>ATS Taiwan</fullName>
            </value>
            <value>
                <fullName>ATS Japan</fullName>
            </value>
            <value>
                <fullName>ATS Korea</fullName>
            </value>
            <value>
                <fullName>ATS New Zealand</fullName>
            </value>
            <value>
                <fullName>ATS Indonesia</fullName>
            </value>
            <value>
                <fullName>ATS Malaysia</fullName>
            </value>
            <value>
                <fullName>ATS Thailand</fullName>
            </value>
            <value>
                <fullName>ATS India</fullName>
            </value>
            <value>
                <fullName>ATS Czech Republic</fullName>
            </value>
            <value>
                <fullName>ATS Denmark</fullName>
            </value>
            <value>
                <fullName>ATS Egypt</fullName>
            </value>
            <value>
                <fullName>ATS France</fullName>
            </value>
            <value>
                <fullName>ATS Germany</fullName>
            </value>
            <value>
                <fullName>ATS Israel</fullName>
            </value>
            <value>
                <fullName>ATS Italy</fullName>
            </value>
            <value>
                <fullName>ATS Netherlands</fullName>
            </value>
            <value>
                <fullName>ATS Qatar</fullName>
            </value>
            <value>
                <fullName>ATS Russia</fullName>
            </value>
            <value>
                <fullName>ATS Saudi Arabia</fullName>
            </value>
            <value>
                <fullName>ATS South Africa</fullName>
            </value>
            <value>
                <fullName>ATS Spain</fullName>
            </value>
            <value>
                <fullName>ATS Switzerland</fullName>
            </value>
            <value>
                <fullName>ATS Turkey</fullName>
            </value>
            <value>
                <fullName>ATS UAE</fullName>
            </value>
            <value>
                <fullName>ATS UK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>