src/objects/Direct_Access_App_Toll_Free_No__c/fields/GeoLocation__c.field-meta.xml
<CustomField>
    <fullName>GeoLocation__c</fullName>
    <label>GeoLocation</label>
    <scale>5</scale>
    <type>Location</type>
</CustomField>