src/objects/Direct_Access_App_Toll_Free_No__c/fields/New_DID__c.field-meta.xml
<CustomField>
    <fullName>New_DID__c</fullName>
    <label>New DID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>