src/objects/Direct_Access_App_Toll_Free_No__c/fields/New_Toll_Free__c.field-meta.xml
<CustomField>
    <fullName>New_Toll_Free__c</fullName>
    <label>New Toll-Free</label>
    <length>25</length>
    <type>Text</type>
</CustomField>