src/objects/Direct_Access_App_Toll_Free_No__c/fields/VDN__c.field-meta.xml
<CustomField>
    <fullName>VDN__c</fullName>
    <label>VDN</label>
    <length>25</length>
    <type>Text</type>
</CustomField>